# os

./: .gitignore  Cargo.toml  README  makefile  tmp.asm  x86_64-unknown-none-gnu.json
core/: Cargo.toml
irq_handler/: Cargo.toml
irq_handler/src/: lib.rs  port.rs
rlibc/: Cargo.toml
rlibc/src/: lib.rs
src/: lib.rs  pic.rs  port.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  boot64.asm  linker.ld
src/memory/: area_frame_allocator.rs  mod.rs
src/memory/paging/: entry.rs  mod.rs  table.rs
